Mon Jun 11 18:34:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.h:
        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/descriptors/run_test.pl:
          Extended dp checks for OpenDDS, there the instancehandle itself
          isn't unique between dp

Mon Jun 11 17:54:39 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Receiver/Unkeyed_Test_Receiver_exec.cpp:
          Fixed typo

Mon Jun 11 12:37:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/ndds/ndds_dcps_instance_handleC.h:
        * connectors/dds4ccm/impl/dds4ccm_conf.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
        * connectors/dds4ccm/impl/ndds/convertors/InstanceHandle_t.h:
        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ContentFilteredTopic/EventListener/Receiver/CFTLE_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/DDSEntity/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/Getter/Receiver/Getter_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/InstanceHandle/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/KeyedWriter/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenManyByMany/Receiver/LMBM_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Receiver/QCLE_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Receiver/QCTL_Test_Receiver_exec.cpp: